# mesa

./: .gitlab-ci.yml  .mailmap  .pick_status.json  meson.build  meson_options.txt
.gitlab-ci/: crosvm-init.sh  deqp-runner.sh  image-tags.yml  test-source-dep.yml
.gitlab-ci/common/: generate-env.sh
.gitlab-ci/container/: build-libdrm.sh  build-piglit.sh  gitlab-ci.yml  lava_build.sh
.gitlab-ci/container/debian/: arm64_build.sh  x86_64_build.sh  x86_64_test-gl.sh  x86_64_test-vk.sh
.gitlab-ci/lava/: add-results-to-json.py  lava-gitlab-ci.yml
.gitlab-ci/test/: gitlab-ci.yml
.gitlab-ci/vkd3d-proton/: run.sh
android/: Android.mk  mesa3d_cross.mk
docs/: android.rst  conf.py  envvars.rst  features.txt  index.rst  meson.build  meson.rst  submittingpatches.rst
docs/ci/: index.rst
docs/drivers/freedreno/hw/: lrz.rst
docs/gallium/: screen.rst  tgsi.rst
docs/relnotes/: new_features.txt
include/: kopper_interface.h  meson.build
include/GL/internal/: dri_interface.h  mesa_interface.h
include/drm-uapi/: amdgpu_drm.h  i915_drm.h  nouveau_drm.h  virtgpu_drm.h
include/pci_ids/: iris_pci_ids.h
src/: .clang-format  meson.build
src/amd/ci/: gitlab-ci-inc.yml  gitlab-ci.yml
src/amd/common/: ac_descriptors.c  ac_descriptors.h  ac_gpu_info.c  ac_gpu_info.h  ac_nir.c  ac_nir.h  ac_nir_lower_ngg.c  ac_nir_lower_tess_io_to_mem.c  ac_nir_to_llvm.c  ac_rtld.c  ac_rtld.h  ac_shader_util.c  ac_shader_util.h  ac_sqtt.c  ac_sqtt.h  ac_surface.c  libdrm_amdgpu_gen_loader.py  libdrm_amdgpu_loader.c  libdrm_amdgpu_loader.h  meson.build  sid.h
src/amd/compiler/: aco_assembler.cpp  aco_insert_waitcnt.cpp  aco_instruction_selection.cpp  aco_instruction_selection_setup.cpp  aco_interface.cpp  aco_ir.cpp  aco_ir.h  aco_live_var_analysis.cpp  aco_lower_to_cssa.cpp  aco_lower_to_hw_instr.cpp  aco_opcodes.py  aco_optimizer.cpp  aco_print_ir.cpp  aco_register_allocation.cpp  aco_reindex_ssa.cpp  aco_shader_info.h  aco_spill.cpp  aco_statistics.cpp  aco_util.h  aco_validate.cpp
src/amd/llvm/: ac_nir_to_llvm.c
src/amd/vulkan/: meson.build  radv_acceleration_structure.c  radv_aco_shader_info.h  radv_cmd_buffer.c  radv_cmd_buffer.h  radv_cs.h  radv_debug.h  radv_descriptor_set.c  radv_device.c  radv_formats.c  radv_image.c  radv_image_view.c  radv_instance.c  radv_instance.h  radv_meta_blit2d.c  radv_meta_clear.c  radv_physical_device.c  radv_physical_device.h  radv_pipeline.c  radv_pipeline.h  radv_pipeline_compute.c  radv_pipeline_graphics.c  radv_pipeline_graphics.h  radv_pipeline_rt.c  radv_queue.c  radv_shader.c  radv_shader.h  radv_shader_args.c  radv_sqtt.c  radv_video_enc.c
src/asahi/compiler/: agx_compile.c  agx_nir_lower_discard_zs_emit.c
src/asahi/lib/: agx_device.c  meson.build
src/broadcom/ci/: broadcom-rpi4-fails.txt
src/broadcom/compiler/: nir_to_vir.c  v3d_compiler.h  v3d_nir_lower_io.c  v3d_nir_lower_load_store_bitsize.c
src/broadcom/vulkan/: v3dv_android.c  v3dv_device.c  v3dv_image.c  v3dv_pipeline.c  v3dv_private.h
src/c11/: threads.h
src/compiler/: shader_info.h
src/compiler/clc/: clc_helpers.cpp
src/compiler/glsl/: gl_nir_linker.c  glsl_parser_extras.cpp  glsl_to_nir.cpp  meson.build  standalone.cpp
src/compiler/nir/: meson.build  nir.c  nir.h  nir_builder.c  nir_builder.h  nir_clone.c  nir_divergence_analysis.c  nir_format_convert.c  nir_gather_info.c  nir_gather_types.c  nir_intrinsics.py  nir_linking_helpers.c  nir_loop_analyze.c  nir_lower_64b_atomics.c  nir_lower_alu_to_scalar.c  nir_lower_alu_width.c  nir_lower_blend.h  nir_lower_bool_to_bitsize.c  nir_lower_bool_to_float.c  nir_lower_bool_to_int32.c  nir_lower_double_ops.c  nir_lower_io.c  nir_lower_shader_calls.c  nir_lower_var_copies.c  nir_opcodes.py  nir_opt_algebraic.py  nir_opt_dce.c  nir_opt_dead_cf.c  nir_opt_licm.c  nir_opt_load_store_vectorize.c  nir_opt_loop_unroll.c  nir_opt_offsets.c  nir_opt_peephole_select.c  nir_opt_shrink_vectors.c  nir_opt_sink.c  nir_opt_tid_function.c  nir_opt_uniform_atomics.c  nir_opt_varyings.c  nir_opt_vectorize.c  nir_print.c  (+2 more)
src/compiler/spirv/: nir_spirv.h  spirv_to_nir.c  vtn_alu.c  vtn_glsl450.c  vtn_private.h  vtn_structured_cfg.c  vtn_variables.c
src/drm-shim/: device.c
src/egl/: meson.build
src/egl/main/: eglapi.c  egldisplay.h
src/etnaviv/drm/: etnaviv_priv.h
src/etnaviv/isa/: asm.rs  assembler.c  enum_rules.rs.py  etnaviv.pest.py  etnaviv.xml  isa.h  meson.build  parser.rs.py
src/etnaviv/isa/tests/: disasm.cpp  meson.build
src/freedreno/ci/: freedreno-a618-fails.txt  freedreno-a618-skips.txt  freedreno-a630-skips.txt  gitlab-ci-inc.yml  gitlab-ci.yml
src/freedreno/common/: freedreno_dev_info.h  freedreno_devices.py  freedreno_gpu_event.h
src/freedreno/computerator/: a6xx.cc
src/freedreno/decode/: meson.build
src/freedreno/drm/: freedreno_ringbuffer_sp.c
src/freedreno/fdl/: fd6_tiled_memcpy.cc  freedreno_layout.h  meson.build
src/freedreno/ir3/: instr-a3xx.h  ir3.c  ir3.h  ir3_a6xx.c  ir3_compiler.c  ir3_compiler.h  ir3_compiler_nir.c  ir3_context.c  ir3_context.h  ir3_legalize.c  ir3_lexer.l  (+15 more)
src/gallium/: meson.build
src/glx/: dri2_priv.h  dri3_glx.c  dri3_priv.h  dri_common.c  dri_common.h  dri_common_interop.c  dri_common_query_renderer.c  drisw_glx.c  drisw_priv.h  meson.build
src/loader/: loader.c  loader.h  loader_dri3_helper.c  loader_dri3_helper.h  loader_dri_helper.c  loader_dri_helper.h
src/mesa/: meson.build
src/nouveau/headers/: class_parser.py  lib_rs_gen.py  meson.build  nv_push_dump.c
src/nouveau/headers/mixin/classes/: clb197.h  clc097.h  clc197.h  clc397.h  clc597.h  clc697.h  clc797.h  clc997.h  clcb97.h
src/nouveau/headers/push_rs/: lib.rs  push.rs
src/panfrost/: meson.build
src/tool/: mda.c  meson.build
src/tool/pps/: meson.build
src/util/: 00-mesa-defaults.conf  00-radv-defaults.conf  archive.c  archive.h  disk_cache.c  disk_cache_os.c  disk_cache_os.h  driconf.h  format_r11g11b10f.h  fossilize_db.c  meson.build  os_misc.c  register_allocate.c  register_allocate.h
src/vulkan/: meson.build
subprojects/: pest.wrap  pest_derive.wrap  pest_generator.wrap  pest_meta.wrap
(+731 files in other folders)
